5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1585_2049.log
== SUBMITION (2019-03-24 21:04:05) 
-- CODE:
var1=int(input());
var2=int(input());

print(var1);
print(var2);
print(var1/var2);
print(var1%var2);
-- EXECUTION TIME:
0.178023
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1.6
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7.0
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173.5
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 21:04:15) 
-- CODE:
var1=int(input());
var2=int(input());

print(var1);
print(var2);
print(var1/var2);
print(var1%var2);
-- OUTPUT:
8
5
1.6
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 21:04:55) 
-- CODE:
var1=int(input());
var2=int(input());

print(var1);
print(var2);
print(round(var1/var2,0);
print(var1%var2);
-- ERROR:
File "XXXX", line 6
    print(round(var1/var2,0);
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 21:05:18) 
-- CODE:
var1=int(input());
var2=int(input());

print(var1);
print(var2);
print(round(var1/var2,0));
print(var1%var2);
-- OUTPUT:
8
5
2.0
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 21:05:54) 
-- CODE:
var1=int(input());
var2=int(input());

print(var1);
print(var2);
print(int(var1/var2));
print(var1%var2);
-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 21:06:04) 
-- CODE:
var1=int(input());
var2=int(input());

print(var1);
print(var2);
print(int(var1/var2));
print(var1%var2);
-- EXECUTION TIME:
0.158013
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
